--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<p>Hello</p>
-<p>This is the architechture of my personal website </p>
-<p>You can find me here</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Jelly Transpo</title>
+</head>
+<body>
+
+	<h1>Jelly Transpo</h1>
+	
+</body>
+</html>
